Some CSS fixes and enhancements. (#5796)
* Remove unused function.

* Delete no longer used function.

This has been replaced by the dropdown.

* Handle editor height in CSS instead of JS.

More performant.

* Less excess space around the editor.

* Verbiage change as per @MichaelArestad

* Remove unused function.

* Add in a bunch of PHPDoc documentation.

* Add a fallback if no revisions are found.

* Whitespace on comments.

* Custom CSS: update docblocks to help parsing for Codex.

* Custom CSS: coding standards improvements

This will avoid Code Sniffer warnings on those new files.

* Custom CSS: use count instead of sizeof

As per coding standards, use of sizeof is forbidden. Prefer `count()` instead, as `sizeof()` is only an alias of `count()`

--- a/modules/custom-css/custom-css/css/customizer-control.css
+++ b/modules/custom-css/custom-css/css/customizer-control.css
@@ -3,11 +3,13 @@
 	font-family: Consolas, Monaco, monospace;
 	font-size: 12px;
 	line-height: 16px;
-	margin: 16px 0 0 0;
+	margin: 0;
 	direction: ltr;
 	text-align: left;
 	border-top: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
+	height: 300px;
+	height: calc( 100vh - 244px );
 }
 .for-codemirror {
 	width: 98%;
